# llvm-project

./: config_cmake.sh
clang/include/clang/Basic/: BuiltinsIMCE.def  TargetBuiltins.h
clang/lib/Basic/: CMakeLists.txt  Targets.cpp
clang/lib/Basic/Targets/: IMCE.cpp  IMCE.h
clang/lib/CodeGen/: CGBuiltin.cpp  CodeGenFunction.h
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Driver/ToolChains/: IMCEToolchain.cpp  IMCEToolchain.h
llvm/: .gitignore  CMakeLists.txt
llvm/docs/: doxygen.cfg.in
llvm/examples/IRplayground/: binop_add.cpp  binop_add.ll  binop_add.mem2reg.ll  binop_or.cpp  binop_or.ll  binop_or.mem2reg.ll  ch7_ssa.cpp  ch7_ssa.ll  ch7_ssa.mem2reg.ll  generate_ir.sh  indirectbr.cpp  indirectbr.ll  indirectbr.mem2reg.ll  mem2reg_made_simple.ll  mem2reg_made_simple.mem2reg.ll
llvm/include/llvm/BinaryFormat/: ELF.h
llvm/include/llvm/CodeGen/: ISDOpcodes.h
llvm/include/llvm/IR/: CMakeLists.txt  Intrinsics.td  IntrinsicsIMCE.td
llvm/lib/BinaryFormat/: ELF.cpp
llvm/lib/IR/: LegacyPassManager.cpp
llvm/lib/Object/: ELF.cpp
llvm/lib/TargetParser/: Triple.cpp
llvm/tools/llc/: llc.cpp
llvm_practice/: .gitignore  CMakeLists.txt  add.s  and.ll  codegen.txt  compile_rv64.sh  const.ll  const.s  imce_add.ll  imce_add.s  imce_const.ll  llc.help  remakr  send.ll  test.c  test.ll  test.opt.ll  test.opt.s  test.s  test_dag.bak.cpp  test_dag.cpp  test_target_related.cpp
llvm_practice/cpp/: fibo.cpp  nestloop.cpp  test_dag.cpp  test_dummy.cpp  test_rinst.cpp
llvm_practice/gdb_util/: pygdb.py
llvm_practice/misc/: make_rtest_ll.py
llvm_practice/sh/: compile_rv64.sh  run_imce_clang.sh  run_imce_llc.sh  test_imce_all_test.sh  test_imce_clang.sh
llvm_practice/test_cpp/: common_decl.h  test_builtinds.cpp  test_conv.cpp  test_core_id.cpp  test_long_branch.cpp  test_relu.cpp
llvm_practice/test_ll/: .gitignore  add.ll  imce_intrinsics.ll  nestloop.ll  nestloop.s  test_imce_ainst.ll  test_imce_binst.ll  test_imce_cinst.ll  test_imce_iinst.ll  test_imce_jinst.ll  test_imce_pinst.ll  test_imce_qinst.ll  test_imce_rinst.ll  test_imce_rinst.ll_linked.ll  test_imce_sinst.ll  test_imce_xinst.ll
llvm_practice/utils/: inst.py
(+5 files in other folders)
